[gd_scene load_steps=21 format=4 uid="uid://cgjqviyvxrbh2"]

[ext_resource type="Texture2D" uid="uid://b5168by4deaet" path="res://art/tilesets/plains.png" id="1_4wyf3"]
[ext_resource type="Script" uid="uid://cl712oss8isjl" path="res://script/world.gd" id="1_7r4gi"]
[ext_resource type="Texture2D" uid="uid://bxqjlmq4crwj7" path="res://art/tilesets/grass.png" id="2_k0juu"]
[ext_resource type="Texture2D" uid="uid://mtlwo81ftccl" path="res://art/objects/objects.png" id="3_71j4m"]
[ext_resource type="PackedScene" uid="uid://clsn745svmq0l" path="res://scenes/player.tscn" id="4_k0juu"]
[ext_resource type="Texture2D" uid="uid://dx6tp5mmqqg88" path="res://art/tilesets/fences.png" id="5_qfnet"]
[ext_resource type="TileSet" uid="uid://brcjnw58lwpt8" path="res://scenes/ysort.tres" id="6_4mrxx"]
[ext_resource type="Texture2D" uid="uid://hqkra40ni8tj" path="res://art/tilesets/decor_16x16.png" id="6_i7141"]
[ext_resource type="PackedScene" uid="uid://dn4twbhrm62vf" path="res://scenes/enemy.tscn" id="8_4mrxx"]
[ext_resource type="AudioStream" uid="uid://c1fa80pdpgph4" path="res://audio/bgm/Evil-Bodega-Adam-MacDougall.mp3" id="10_w7kh3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7r4gi"]
texture = ExtResource("3_71j4m")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w7kh3"]
texture = ExtResource("1_4wyf3")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e3hyu"]
texture = ExtResource("2_k0juu")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q5onr"]
texture = ExtResource("5_qfnet")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jhx03"]
texture = ExtResource("6_i7141")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0

[sub_resource type="TileSet" id="TileSet_o8fc1"]
sources/0 = SubResource("TileSetAtlasSource_7r4gi")
sources/1 = SubResource("TileSetAtlasSource_w7kh3")
sources/2 = SubResource("TileSetAtlasSource_e3hyu")
sources/3 = SubResource("TileSetAtlasSource_q5onr")
sources/5 = SubResource("TileSetAtlasSource_jhx03")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7r4gi"]
size = Vector2(76, 35.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7kh3"]
size = Vector2(25, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e3hyu"]
size = Vector2(24, 46)

[sub_resource type="GDScript" id="GDScript_w7kh3"]
script/source = "extends CanvasLayer

@onready var label = $Panel/Label
"

[node name="world" type="Node2D"]
y_sort_enabled = true
position = Vector2(1, 1)
script = ExtResource("1_7r4gi")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_o8fc1")

[node name="ground" type="TileMapLayer" parent="TileMapLayer"]
use_parent_material = true
position = Vector2(2, 7)
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAABAAAAAQAAAAAAAAACAAAAAQAAAAAAAAADAAAAAQAAAAAAAAAEAAAAAQAAAAAAAAAFAAAAAQAAAAAAAAAGAAAAAQAAAAAAAAAHAAAAAQAAAAAAAAAIAAAAAQAAAAAAAAAJAAAAAQAAAAAAAAAKAAAAAQAAAAAAAAALAAAAAQAAAAAAAAAMAAAAAQAAAAAAAAANAAAAAQAAAAAAAAAOAAAAAQAAAAAAAAAPAAAAAQAAAAAAAAAQAAAAAQAAAAAAAAARAAAAAQAAAAAAAAASAAAAAQAAAAAAAAATAAAAAQAAAAAAAAAUAAAAAQAAAAAAAAAVAAAAAQAAAAAAAAAWAAAAAQAAAAAAAAAXAAAAAQAAAAAAAAAYAAAAAQAAAAAAAAAZAAAAAQAAAAAAAAAZAAEAAQAAAAAAAAAZAAIAAQAAAAAAAAAZAAMAAQAAAAAAAAAZAAQAAQAAAAAAAAAZAAYAAAACAAEAAAAZAAcAAAACAAIAAAAZAAgAAQAAAAAAAAAZAAkAAQAAAAAAAAAZAAoAAQAAAAAAAAAZAAsAAQAAAAAAAAAYAAsAAQAAAAAAAAAXAAsAAQAAAAAAAAAWAAoAAQAAAAAAAAAVAAoAAQAAAAAAAAAUAAoAAAADAAIAAAASAAoAAAACAAIAAAARAAkAAAACAAEAAAAQAAkAAAAFAAAAAAAOAAkAAQAAAAAAAAANAAkAAQAAAAAAAAAMAAkAAQAAAAAAAAALAAkAAQAAAAAAAAAKAAkAAQAAAAAAAAAJAAkAAQAAAAAAAAASAAkAAAACAAEAAAATAAkAAAACAAEAAAAUAAkAAAAEAAAAAAAXAAoAAQAAAAAAAAAWAAsAAQAAAAAAAAAVAAsAAQAAAAAAAAAUAAsAAQAAAAAAAAATAAsAAQAAAAAAAAASAAsAAQAAAAAAAAARAAsAAQAAAAAAAAAPAAsAAQAAAAAAAAAOAAsAAQAAAAAAAAANAAsAAQAAAAAAAAAHAAsAAQAAAAAAAAAGAAsAAQAAAAAAAAAFAAsAAQAAAAAAAAAEAAsAAQAAAAAAAAADAAsAAQAAAAAAAAAAAAoAAQAAAAAAAAAAAAkAAQAAAAAAAAAAAAgAAQAAAAAAAAAAAAcAAQAAAAAAAAAAAAYAAQAAAAAAAAAAAAUAAAABAAIAAAAAAAQAAAAFAAAAAAAAAAIAAAADAAAAAAAAAAEAAQAAAAAAAAABAAEAAQAAAAAAAAACAAEAAQAAAAAAAAACAAIAAQAAAAAAAAADAAIAAQAAAAAAAAAEAAIAAQAAAAAAAAAFAAIAAQAAAAAAAAAIAAEAAQAAAAAAAAAJAAEAAQAAAAAAAAAKAAEAAQAAAAAAAAALAAEAAQAAAAAAAAAFAAEAAQAAAAAAAAAEAAEAAQAAAAAAAAADAAEAAQAAAAAAAAACAAMAAAACAAAAAAACAAQAAAACAAEAAAACAAUAAAACAAEAAAABAAYAAAABAAIAAAADAAMAAAADAAAAAAADAAQAAAADAAEAAAABAAIAAQAAAAAAAAABAAQAAAACAAEAAAABAAUAAAAFAAAAAAACAAcAAAABAAEAAAACAAgAAAABAAIAAAACAAkAAQAAAAAAAAABAAkAAQAAAAAAAAABAAcAAQAAAAAAAAABAAgAAQAAAAAAAAACAAoAAQAAAAAAAAABAAoAAQAAAAAAAAAKAAoAAQAAAAAAAAALAAoAAQAAAAAAAAAMAAoAAQAAAAAAAAANAAoAAQAAAAAAAAAOAAoAAQAAAAAAAAAQAAoAAAABAAIAAAARAAoAAAACAAIAAAAVAAkAAAADAAIAAAAYAAoAAQAAAAAAAAAYAAkAAQAAAAAAAAAXAAkAAQAAAAAAAAAWAAkAAQAAAAAAAAAWAAgAAAACAAIAAAAXAAgAAAACAAIAAAAYAAgAAAADAAIAAAAYAAcAAAAEAAAAAAAYAAYAAAACAAEAAAAYAAUAAAACAAAAAAAYAAQAAQAAAAAAAAAYAAMAAQAAAAAAAAAYAAIAAQAAAAAAAAAYAAEAAQAAAAAAAAAXAAEAAQAAAAAAAAAXAAIAAQAAAAAAAAAXAAMAAQAAAAAAAAAXAAQAAQAAAAAAAAAXAAUAAAABAAAAAAAXAAYAAAAFAAEAAAAXAAcAAAACAAEAAAAWAAcAAAACAAEAAAAWAAYAAAACAAAAAAAWAAUAAQAAAAAAAAAWAAQAAQAAAAAAAAAWAAMAAQAAAAAAAAAWAAIAAQAAAAAAAAAWAAEAAQAAAAAAAAAVAAEAAQAAAAAAAAAVAAIAAQAAAAAAAAAVAAMAAQAAAAAAAAAVAAQAAQAAAAAAAAAVAAUAAAADAAAAAAAVAAYAAAAEAAEAAAAVAAcAAAACAAEAAAAVAAgAAAAEAAAAAAAUAAgAAAACAAEAAAAUAAcAAAAFAAEAAAAUAAYAAAABAAEAAAAUAAUAAAABAAAAAAAUAAQAAQAAAAAAAAAUAAMAAQAAAAAAAAAUAAIAAQAAAAAAAAAUAAEAAQAAAAAAAAATAAEAAQAAAAAAAAATAAIAAQAAAAAAAAATAAMAAQAAAAAAAAATAAQAAQAAAAAAAAATAAUAAQAAAAAAAAATAAYAAQAAAAAAAAATAAcAAAACAAAAAAATAAgAAAACAAEAAAASAAgAAAACAAEAAAASAAcAAAACAAAAAAASAAYAAQAAAAAAAAASAAUAAQAAAAAAAAASAAQAAQAAAAAAAAASAAMAAQAAAAAAAAASAAIAAQAAAAAAAAASAAEAAQAAAAAAAAARAAEAAQAAAAAAAAARAAIAAQAAAAAAAAARAAMAAQAAAAAAAAARAAQAAQAAAAAAAAAQAAQAAQAAAAAAAAAQAAUAAQAAAAAAAAAQAAYAAQAAAAAAAAAQAAcAAAACAAAAAAAQAAgAAAACAAEAAAARAAgAAAACAAEAAAARAAcAAAACAAAAAAARAAYAAQAAAAAAAAARAAUAAQAAAAAAAAAQAAMAAQAAAAAAAAAQAAIAAQAAAAAAAAAQAAEAAQAAAAAAAAAPAAEAAQAAAAAAAAAPAAIAAQAAAAAAAAAPAAMAAQAAAAAAAAAPAAQAAQAAAAAAAAAPAAUAAQAAAAAAAAAOAAgAAAABAAIAAAAOAAcAAAAFAAAAAAAOAAQAAAADAAAAAAAOAAMAAQAAAAAAAAAOAAIAAQAAAAAAAAAOAAEAAQAAAAAAAAANAAEAAQAAAAAAAAANAAIAAQAAAAAAAAANAAMAAQAAAAAAAAANAAQAAAACAAAAAAANAAUAAAACAAEAAAANAAcAAAACAAIAAAANAAgAAQAAAAAAAAAMAAcAAAAEAAAAAAAMAAYAAAACAAEAAAAMAAUAAAACAAEAAAAMAAQAAAACAAAAAAAMAAMAAQAAAAAAAAAMAAIAAQAAAAAAAAAMAAEAAQAAAAAAAAALAAIAAQAAAAAAAAAKAAIAAQAAAAAAAAAJAAIAAQAAAAAAAAAIAAIAAQAAAAAAAAAHAAIAAQAAAAAAAAAGAAIAAQAAAAAAAAAEAAMAAQAAAAAAAAAFAAMAAQAAAAAAAAAGAAMAAQAAAAAAAAAHAAMAAQAAAAAAAAAIAAMAAQAAAAAAAAAJAAMAAQAAAAAAAAAKAAMAAQAAAAAAAAALAAMAAQAAAAAAAAALAAQAAAABAAAAAAAKAAQAAQAAAAAAAAAJAAQAAQAAAAAAAAAIAAQAAQAAAAAAAAAHAAQAAQAAAAAAAAAGAAQAAQAAAAAAAAAFAAQAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAUAAAADAAAAAAAFAAUAAQAAAAAAAAAGAAUAAQAAAAAAAAAHAAUAAQAAAAAAAAAIAAUAAAABAAAAAAAJAAUAAAACAAAAAAAKAAUAAAACAAAAAAALAAUAAAAFAAEAAAALAAYAAAACAAEAAAAKAAYAAAACAAEAAAAJAAYAAAACAAEAAAAHAAYAAQAAAAAAAAACAAYAAAAFAAAAAAADAAgAAAAFAAAAAAADAAkAAAABAAIAAAAEAAkAAAACAAIAAAAJAAcAAAACAAEAAAAKAAcAAAACAAEAAAALAAgAAAACAAIAAAAKAAgAAAACAAIAAAAJAAgAAAACAAIAAAAHAAgAAAACAAEAAAAGAAgAAAACAAEAAAALAAcAAAACAAEAAAAGAAYAAQAAAAAAAAAFAAYAAQAAAAAAAAABAAMAAAACAAAAAAAAAAMAAAAEAAEAAAAMAAgAAAADAAIAAAAMAAsAAQAAAAAAAAALAAsAAQAAAAAAAAAKAAsAAQAAAAAAAAAJAAsAAQAAAAAAAAAIAAsAAQAAAAAAAAACAAsAAQAAAAAAAAABAAsAAQAAAAAAAAAAAAsAAQAAAAAAAAADAAoAAQAAAAAAAAAJAAoAAQAAAAAAAAAIAAoAAQAAAAAAAAAGAAoAAQAAAAAAAAAFAAoAAQAAAAAAAAAEAAoAAQAAAAAAAAAHAAoAAQAAAAAAAAAFAAkAAAACAAIAAAAHAAkAAAACAAIAAAAGAAkAAAACAAIAAAAIAAkAAAADAAIAAAAIAAgAAAAEAAAAAAADAAUAAAAEAAEAAAADAAYAAAACAAEAAAAEAAYAAAADAAEAAAADAAcAAAACAAEAAAAFAAgAAAACAAEAAAAEAAgAAAACAAEAAAAIAAcAAAAFAAEAAAAIAAYAAAABAAEAAAAFAAcAAAACAAAAAAAGAAcAAAACAAAAAAAHAAcAAAACAAAAAAAEAAcAAAAEAAEAAAAQAAsAAQAAAAAAAAAPAAoAAQAAAAAAAAAPAAkAAAABAAIAAAAPAAgAAAAFAAAAAAAPAAcAAAAEAAEAAAAPAAYAAAADAAAAAAAOAAUAAAADAAEAAAAOAAYAAAAEAAEAAAANAAYAAAACAAEAAAATAAoAAAACAAIAAAAGAAEAAQAAAAAAAAAHAAEAAQAAAAAAAAAAAAwAAQAAAAAAAAABAAwAAQAAAAAAAAACAAwAAQAAAAAAAAADAAwAAQAAAAAAAAAEAAwAAQAAAAAAAAAFAAwAAQAAAAAAAAAAAA0AAQAAAAAAAAABAA0AAQAAAAAAAAACAA0AAQAAAAAAAAADAA0AAQAAAAAAAAAEAA0AAQAAAAAAAAAFAA0AAQAAAAAAAAAGAAwAAQAAAAAAAAAHAAwAAQAAAAAAAAAIAAwAAQAAAAAAAAAJAAwAAQAAAAAAAAAKAAwAAQAAAAAAAAALAAwAAQAAAAAAAAAMAAwAAQAAAAAAAAANAAwAAQAAAAAAAAAOAAwAAQAAAAAAAAAPAAwAAQAAAAAAAAAQAAwAAQAAAAAAAAARAAwAAQAAAAAAAAASAAwAAQAAAAAAAAATAAwAAQAAAAAAAAAUAAwAAQAAAAAAAAAVAAwAAQAAAAAAAAAWAAwAAQAAAAAAAAAXAAwAAQAAAAAAAAAYAAwAAQAAAAAAAAAZAAwAAQAAAAAAAAAZAA0AAQAAAAAAAAAYAA0AAQAAAAAAAAAXAA0AAQAAAAAAAAAWAA0AAQAAAAAAAAAVAA0AAQAAAAAAAAAUAA0AAQAAAAAAAAATAA0AAQAAAAAAAAASAA0AAQAAAAAAAAARAA0AAQAAAAAAAAAQAA0AAQAAAAAAAAAPAA0AAQAAAAAAAAAOAA0AAQAAAAAAAAANAA0AAQAAAAAAAAAMAA0AAQAAAAAAAAALAA0AAQAAAAAAAAAKAA0AAQAAAAAAAAAJAA0AAQAAAAAAAAAIAA0AAQAAAAAAAAAHAA0AAQAAAAAAAAAGAA0AAQAAAAAAAAD//w0AAQAAAAAAAAD//wwAAQAAAAAAAAD//wsAAQAAAAAAAAD//woAAQAAAAAAAAD//wkAAQAAAAAAAAD//wgAAQAAAAAAAAD//wcAAQAAAAAAAAD//wYAAQAAAAAAAAD//wUAAAADAAIAAAD//wQAAAAEAAAAAAD+/wQAAAACAAEAAAD+/wMAAAACAAEAAAD+/wIAAAACAAAAAAD//wIAAAACAAAAAAD//wEAAQAAAAAAAAD//wAAAQAAAAAAAAD//wMAAAACAAEAAAD+/wAAAQAAAAAAAAD+/wEAAQAAAAAAAAD+/wUAAAACAAIAAAD+/wYAAQAAAAAAAAD+/wcAAQAAAAAAAAD+/wgAAQAAAAAAAAD+/wkAAQAAAAAAAAD+/woAAQAAAAAAAAD+/wsAAQAAAAAAAAD+/wwAAQAAAAAAAAD+/w0AAQAAAAAAAAD9/w0AAQAAAAAAAAD9/wwAAQAAAAAAAAD9/wsAAQAAAAAAAAD9/woAAQAAAAAAAAD9/wkAAQAAAAAAAAD9/wgAAQAAAAAAAAD9/wcAAQAAAAAAAAD9/wYAAQAAAAAAAAD9/wUAAAACAAIAAAD9/wQAAAACAAEAAAD9/wMAAAACAAEAAAD9/wIAAAACAAAAAAD9/wEAAQAAAAAAAAD9/wAAAQAAAAAAAAD8/w0AAQAAAAAAAAD8/wwAAQAAAAAAAAD8/wsAAQAAAAAAAAD8/woAAQAAAAAAAAD8/wkAAQAAAAAAAAD8/wgAAQAAAAAAAAD8/wcAAQAAAAAAAAD8/wYAAQAAAAAAAAD8/wUAAAACAAIAAAD8/wQAAAACAAEAAAD8/wMAAAACAAEAAAD8/wIAAAACAAAAAAD8/wEAAQAAAAAAAAD8/wAAAQAAAAAAAAAZAA4AAQAAAAAAAAAYAA4AAQAAAAAAAAAXAA4AAQAAAAAAAAAWAA4AAQAAAAAAAAAVAA4AAQAAAAAAAAAUAA4AAQAAAAAAAAATAA4AAQAAAAAAAAASAA4AAQAAAAAAAAARAA4AAQAAAAAAAAAQAA4AAQAAAAAAAAAPAA4AAQAAAAAAAAAOAA4AAQAAAAAAAAANAA4AAQAAAAAAAAAMAA4AAQAAAAAAAAALAA4AAQAAAAAAAAAKAA4AAQAAAAAAAAAJAA4AAQAAAAAAAAAIAA4AAQAAAAAAAAAHAA4AAQAAAAAAAAAGAA4AAQAAAAAAAAAFAA4AAQAAAAAAAAAEAA4AAQAAAAAAAAADAA4AAQAAAAAAAAACAA4AAQAAAAAAAAABAA4AAQAAAAAAAAAAAA4AAQAAAAAAAAD//w4AAQAAAAAAAAD+/w4AAQAAAAAAAAD9/w4AAQAAAAAAAAD8/w4AAQAAAAAAAAAaAA4AAQAAAAAAAAAaAA0AAQAAAAAAAAAaAAgAAQAAAAAAAAAaAAcAAAACAAIAAAAaAAYAAAACAAEAAAAaAAQAAQAAAAAAAAAaAAkAAQAAAAAAAAAaAAoAAQAAAAAAAAAaAAsAAQAAAAAAAAAaAAwAAQAAAAAAAAAZAP//AQAAAAAAAAAaAAAAAQAAAAAAAAAaAAEAAQAAAAAAAAAaAAIAAQAAAAAAAAAaAAMAAQAAAAAAAAAaAP//AQAAAAAAAAAYAP//AQAAAAAAAAAXAP//AQAAAAAAAAAWAP//AQAAAAAAAAAVAP//AQAAAAAAAAAUAP//AQAAAAAAAAATAP//AQAAAAAAAAASAP//AQAAAAAAAAARAP//AQAAAAAAAAAQAP//AQAAAAAAAAAPAP//AQAAAAAAAAAOAP//AQAAAAAAAAANAP//AQAAAAAAAAAMAP//AQAAAAAAAAALAP//AQAAAAAAAAAKAP//AQAAAAAAAAAHAP//AQAAAAAAAAAIAP//AQAAAAAAAAAJAP//AQAAAAAAAAAGAP//AQAAAAAAAAAFAP//AQAAAAAAAAAEAP//AQAAAAAAAAADAP//AQAAAAAAAAACAP//AQAAAAAAAAABAP//AQAAAAAAAAAAAP//AQAAAAAAAAD/////AQAAAAAAAAD+////AQAAAAAAAAD9////AQAAAAAAAAD8////AQAAAAAAAAAZAAUAAAACAAAAAAAaAAUAAAACAAAAAAAaAP7/AQAAAAAAAAA=")
tile_set = ExtResource("6_4mrxx")

[node name="cliff" type="TileMapLayer" parent="TileMapLayer"]
use_parent_material = true
position = Vector2(2, 7)
tile_map_data = PackedByteArray("AAAZAAAAAAACAAUAAAAYAAAAAAACAAUAAAAXAAAAAAACAAUAAAAWAAAAAAACAAUAAAAVAAAAAAACAAUAAAAUAAAAAAACAAUAAAATAAAAAAACAAUAAAASAAAAAAABAAUAAAASAAEAAAABAAYAAAATAAEAAAAFAAQAAAATAAIAAAABAAYAAAAUAAIAAAACAAYAAAAVAAIAAAACAAYAAAAWAAIAAAACAAYAAAAXAAIAAAACAAYAAAAYAAIAAAACAAYAAAAZAAIAAAACAAYAAAAUAAEAAAACAAUAAAAVAAEAAAACAAUAAAAWAAEAAAACAAUAAAAXAAEAAAACAAUAAAAYAAEAAAACAAUAAAAZAAEAAAACAAUAAAAZAP//AAACAAUAAAAYAP//AAACAAUAAAAXAP//AAACAAUAAAAWAP//AAACAAUAAAAVAP//AAACAAUAAAAUAP//AAACAAUAAAATAP//AAACAAUAAAASAP//AAABAAUAAAAZAP7/AAACAAUAAAAYAP7/AAACAAUAAAAXAP7/AAACAAUAAAAWAP7/AAACAAUAAAAVAP7/AAACAAUAAAAUAP7/AAACAAUAAAATAP7/AAACAAUAAAASAP7/AAABAAUAAAARAP7/AQAAAAAAAAAPAP7/AQAAAAAAAAAQAP7/AQAAAAAAAAAOAP7/AQAAAAAAAAANAP7/AQAAAAAAAAALAP7/AQAAAAAAAAAMAP7/AQAAAAAAAAAKAP7/AQAAAAAAAAAJAP7/AQAAAAAAAAAIAP7/AQAAAAAAAAAHAP7/AQAAAAAAAAAGAP7/AQAAAAAAAAAFAP7/AQAAAAAAAAAEAP7/AQAAAAAAAAADAP7/AQAAAAAAAAACAP7/AQAAAAAAAAABAP7/AQAAAAAAAAAAAP7/AQAAAAAAAAD///7/AQAAAAAAAAD+//7/AQAAAAAAAAD9//7/AQAAAAAAAAD8//7/AQAAAAAAAAAaAAIAAAACAAYAAAAaAAEAAAACAAUAAAAaAAAAAAACAAUAAAAaAP//AAACAAUAAAAaAP7/AAACAAUAAAD8/wYAAAACAAQAAAD9/wYAAAACAAQAAAD+/wYAAAACAAQAAAD//wYAAAACAAQAAAD//wcAAAACAAUAAAD//wgAAAACAAUAAAD//wkAAAACAAUAAAD//woAAAACAAUAAAD//wsAAAACAAUAAAAAAAsAAAADAAUAAAAAAAoAAAADAAUAAAAAAAkAAAADAAUAAAAAAAgAAAADAAUAAAAAAAwAAAADAAUAAAD//w0AAAACAAUAAAD//w4AAAACAAYAAAAAAA4AAAADAAYAAAAAAA0AAAADAAUAAAD//wwAAAACAAUAAAD+/w0AAAACAAUAAAD+/w4AAAACAAYAAAD9/w4AAAACAAYAAAD8/w0AAAACAAUAAAD8/wwAAAACAAUAAAD8/wsAAAACAAUAAAD9/wsAAAACAAUAAAD9/woAAAACAAUAAAD9/wkAAAACAAUAAAD9/wgAAAACAAUAAAD8/wgAAAACAAUAAAD8/wcAAAACAAUAAAD8/wkAAAACAAUAAAD8/woAAAACAAUAAAD9/wcAAAACAAUAAAD+/wcAAAACAAUAAAD+/wgAAAACAAUAAAD+/wkAAAACAAUAAAD+/woAAAACAAUAAAD+/wsAAAACAAUAAAD+/wwAAAACAAUAAAD9/w0AAAACAAUAAAD8/w4AAAACAAYAAAD9/wwAAAACAAUAAAAAAAcAAAADAAUAAAAAAAYAAAADAAQAAAA=")
tile_set = ExtResource("6_4mrxx")

[node name="ysort" type="TileMapLayer" parent="TileMapLayer"]
y_sort_enabled = true
use_parent_material = true
position = Vector2(2, 7)
tile_map_data = PackedByteArray("AAAZAAAAAgAAAAAAAAAWAAEAAgAKAAcAAAAGAAQAAgAAAAUAAAANAAgAAgAAAAUAAAASAAQAAgAAAAUAAAAJAAMAAgAGAAcAAAAWAAUAAgAFAAAAAAAVAAsAAgAKAAcAAAAOAAIAAgAKAAcAAAAIAAsAAgAKAAcAAAAYAAkAAgAIAAYAAAAQAAYAAgAAAAEAAAAUAAAAAgAGAAcAAAACAAEAAgAGAAcAAAAGAAEAAgAAAAAAAAAFAAEAAgAAAAEAAAAHAAEAAgAAAAEAAAANAP//AgAIAAYAAAARAP//AgAIAAYAAAAAAA0ABAADAAIAAAD//w0ABAACAAMAAAD+/w0ABAACAAMAAAD9/w0ABAACAAMAAAD9/wYAAgAAAAUAAAD+/wYABAACAAMAAAD//wYABAACAAMAAAAAAAYABAADAAAAAAAAAAcABAAAAAEAAAAAAAgABAAAAAEAAAAAAAkABAAAAAEAAAAAAAoABAAAAAEAAAAAAAsABAAAAAEAAAAAAAwABAAAAAEAAAD8/wYABAACAAMAAAD8/w0ABAACAAMAAAALAAwAAgAAAAUAAAADAAwAAgAAAAUAAAD+////AgAAAAUAAAAGAP//AgAAAAUAAAAaAAgAAgAFAAAAAAAMAAwAAgAAAAAAAAAKAAAAAgAAAAUAAAAHAA0AAgAGAAcAAAAUAA0AAgAGAAcAAAAYAAwAAgAAAAUAAAAWAA0AAgAAAAEAAAAOAAwAAgAAAAEAAAAJAA0AAgAAAAEAAAAWAAoAAgAAAAEAAAD9/wkABQAAAAAAAAD+/wkAAgAFAAAAAAD8/wkAAgAFAAAAAAD9/wsAAgAAAAUAAAD//wcAAgAKAAcAAAD//wwAAgAKAAcAAAAJAAkAAgAGAAcAAAAQAAsAAgAGAAcAAAAEAAoAAgAAAAEAAAAGAAoAAgAAAAEAAAA=")
tile_set = ExtResource("6_4mrxx")

[node name="player" parent="." instance=ExtResource("4_k0juu")]
position = Vector2(36, 88)

[node name="enemy" parent="." instance=ExtResource("8_4mrxx")]
position = Vector2(209, 75)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(2, 7)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(-144, -58)
polygon = PackedVector2Array(87, 51, 357, 50, 355, 10, 437, 14, 437, 82, 450, 91, 451, 104, 573, 106, 574, 143, 591, 140, 591, 184, 575, 182, 575, 296, 445, 297, 221, 297, 159, 299, 160, 156, 77, 153, 63, 153, 63, 88, 78, 91, 70, 32, 37, 100, 33, 199, 49, 310, 150, 324, 285, 317, 409, 321, 573, 314, 613, 266, 633, 172, 619, 59, 593, 2, 412, -10, 283, -10, 64, -7, 79, 83)

[node name="cliffside_transition_point" type="Area2D" parent="."]
position = Vector2(-6, -19)

[node name="CollisionShape2D" type="CollisionShape2D" parent="cliffside_transition_point"]
position = Vector2(260, -1.75)
shape = SubResource("RectangleShape2D_7r4gi")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(67, 53)
stream = ExtResource("10_w7kh3")
autoplay = true
parameters/looping = false

[node name="enemy2" parent="." instance=ExtResource("8_4mrxx")]
position = Vector2(294, 230)

[node name="enemy3" parent="." instance=ExtResource("8_4mrxx")]
position = Vector2(372, 75)

[node name="enemy4" parent="." instance=ExtResource("8_4mrxx")]
position = Vector2(-6, 184)

[node name="enemy5" parent="." instance=ExtResource("8_4mrxx")]
position = Vector2(94, 237)

[node name="enemy6" parent="." instance=ExtResource("8_4mrxx")]
position = Vector2(75, 60)

[node name="enemy7" parent="." instance=ExtResource("8_4mrxx")]
position = Vector2(186, 170)

[node name="enemy8" parent="." instance=ExtResource("8_4mrxx")]
position = Vector2(371, 158)

[node name="forbidden_zone" type="Area2D" parent="."]

[node name="first_zone" type="CollisionShape2D" parent="forbidden_zone"]
position = Vector2(-66, 69)
shape = SubResource("RectangleShape2D_w7kh3")

[node name="second_zone" type="CollisionShape2D" parent="forbidden_zone"]
position = Vector2(440, 111)
shape = SubResource("RectangleShape2D_e3hyu")

[node name="Warning_Message" type="CanvasLayer" parent="."]
visible = false
script = SubResource("GDScript_w7kh3")

[node name="Panel" type="Panel" parent="Warning_Message"]
offset_left = 40.0
offset_top = 39.0
offset_right = 326.0
offset_bottom = 97.0

[node name="Label" type="Label" parent="Warning_Message/Panel"]
modulate = Color(1, 0.160784, 0.117647, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.5
offset_top = -11.5
offset_right = 128.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Esta zona aun no está disponible."

[connection signal="body_entered" from="cliffside_transition_point" to="." method="_on_cliffside_transition_point_body_entered"]
[connection signal="body_exited" from="cliffside_transition_point" to="." method="_on_cliffside_transition_point_body_exited"]
[connection signal="body_entered" from="forbidden_zone" to="." method="_on_forbidden_zone_body_entered"]
[connection signal="body_exited" from="forbidden_zone" to="." method="_on_forbidden_zone_body_exited"]
